@@ -1,0 +1,3 @@
+# Cacti Poller
+MAILTO=root
+*/5 * * * *	root	/bin/bash /usr/local/sbin/iostat-collector.sh > /dev/null 2>&1
