@@ -4,4 +4,8 @@
 # pass 	<OID>					<PATH to script>								<PATH to mail.log>	<PATH to stats DB file>	<OID>
 pass	.1.3.6.1.4.1.2021.255	/var/svn/scripts/snmp/fetch_mail_statistics.pl	/var/log/mail.log	/var/db/mailstats.db	.1.3.6.1.4.1.2021.255
 
+# iostat.pl:
+# pass	<OID>					<PATH to script>
+pass	.1.3.6.1.4.1.2021.1		/var/svn/scripts/snmp/iostat.pl
+
 # vim: ts=4
